--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 
   <script>
-    const pdfUrl = "https://drive.google.com/uc?export=download&id=1-FNruYVWkJnC8J8l_ySG-JQadCUzbu2h";
+    const pdfUrl = "A-Feminist-Manifesto-Ita.pdf";
 
     const flipbook = $('#flipbook');
     const loadingTask = pdfjsLib.getDocument(pdfUrl);
