--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 <head>
@@ -13,6 +12,8 @@
     .page {
       width: 400px;
       height: 600px;
+      /* Optional: add border to visualize pages */
+      /* border: 1px solid #ccc; */
     }
   </style>
 </head>
@@ -33,6 +34,7 @@
 
     const flipbook = $('#flipbook');
     const loadingTask = pdfjsLib.getDocument(pdfUrl);
+
     loadingTask.promise.then(function(pdf) {
       const numPages = pdf.numPages;
 
@@ -40,15 +42,24 @@
         pdf.getPage(pageNumber).then(function(page) {
           const viewport = page.getViewport({scale: 1.5});
           const canvas = document.createElement("canvas");
-          canvas.classList.add("page");
-          const context = canvas.getContext('2d');
-          canvas.height = viewport.height;
           canvas.width = viewport.width;
+          canvas.height = viewport.height;
+
+          const context = canvas.getContext('2d');
 
           page.render({canvasContext: context, viewport: viewport}).promise.then(function() {
-            flipbook.append(canvas);
-            if (pageNumber < numPages) loadPage(pageNumber + 1);
-            else initFlipbook();
+            // Wrap canvas inside a div.page for Turn.js
+            const pageDiv = document.createElement("div");
+            pageDiv.classList.add("page");
+            pageDiv.appendChild(canvas);
+
+            flipbook.append(pageDiv);
+
+            if (pageNumber < numPages) {
+              loadPage(pageNumber + 1);
+            } else {
+              initFlipbook();
+            }
           });
         });
       };
