--- a/index.html
+++ b/index.html
@@ -1,79 +1,101 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>PDF Flipbook</title>
   <style>
+    body {
+      background: #f0f0f0;
+      font-family: sans-serif;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      margin: 0;
+      padding: 20px;
+    }
     #flipbook {
       width: 800px;
       height: 600px;
-      margin: auto;
+      margin: 20px auto;
     }
     .page {
       width: 400px;
       height: 600px;
-      /* Optional: add border to visualize pages */
-      /* border: 1px solid #ccc; */
+      background: white;
+      box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    }
+    .controls {
+      margin-top: 10px;
+    }
+    .controls button {
+      padding: 8px 16px;
+      margin: 0 5px;
+      font-size: 16px;
     }
   </style>
 </head>
 <body>
-  <div id="flipbook"></div>
 
-  <!-- Load jQuery -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<h2>PDF Flipbook</h2>
+<div id="flipbook"></div>
 
-  <!-- Load Turn.js -->
-  <script src="https://cdn.jsdelivr.net/npm/turn.js@4/turn.min.js"></script>
+<div class="controls">
+  <button onclick="$('#flipbook').turn('previous')">Previous</button>
+  <button onclick="$('#flipbook').turn('next')">Next</button>
+</div>
 
-  <!-- Load PDF.js -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
+<!-- Load jQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
-  <script>
-    const pdfUrl = "A-Feminist-Manifesto-Ita.pdf";
+<!-- Load Turn.js -->
+<script src="https://cdn.jsdelivr.net/npm/turn.js@4/turn.min.js"></script>
 
-    const flipbook = $('#flipbook');
-    const loadingTask = pdfjsLib.getDocument(pdfUrl);
+<!-- Load PDF.js -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 
-    loadingTask.promise.then(function(pdf) {
-      const numPages = pdf.numPages;
+<script>
+  const pdfUrl = "A-Feminist-Manifesto-Ita.pdf"; // Change to actual path if needed
+  const flipbook = $('#flipbook');
 
-      let loadPage = function(pageNumber) {
-        pdf.getPage(pageNumber).then(function(page) {
-          const viewport = page.getViewport({scale: 1.5});
-          const canvas = document.createElement("canvas");
-          canvas.width = viewport.width;
-          canvas.height = viewport.height;
+  pdfjsLib.GlobalWorkerOptions.workerSrc = 'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.worker.min.js';
 
-          const context = canvas.getContext('2d');
+  const loadingTask = pdfjsLib.getDocument(pdfUrl);
 
-          page.render({canvasContext: context, viewport: viewport}).promise.then(function() {
-            // Wrap canvas inside a div.page for Turn.js
-            const pageDiv = document.createElement("div");
-            pageDiv.classList.add("page");
-            pageDiv.appendChild(canvas);
+  loadingTask.promise.then(function(pdf) {
+    const numPages = pdf.numPages;
+    let loadedPages = 0;
 
-            flipbook.append(pageDiv);
+    for (let i = 1; i <= numPages; i++) {
+      pdf.getPage(i).then(function(page) {
+        const viewport = page.getViewport({scale: 1.5});
+        const canvas = document.createElement("canvas");
+        canvas.width = viewport.width;
+        canvas.height = viewport.height;
 
-            if (pageNumber < numPages) {
-              loadPage(pageNumber + 1);
-            } else {
-              initFlipbook();
-            }
-          });
+        const context = canvas.getContext('2d');
+
+        page.render({canvasContext: context, viewport: viewport}).promise.then(function() {
+          const pageDiv = document.createElement("div");
+          pageDiv.className = "page";
+          pageDiv.appendChild(canvas);
+          flipbook.append(pageDiv);
+
+          loadedPages++;
+          if (loadedPages === numPages) {
+            flipbook.turn({
+              width: 800,
+              height: 600,
+              autoCenter: true,
+              elevation: 50,
+              gradients: true,
+              display: 'double'
+            });
+          }
         });
-      };
+      });
+    }
+  });
+</script>
 
-      function initFlipbook() {
-        $('#flipbook').turn({
-          width: 800,
-          height: 600,
-          autoCenter: true
-        });
-      }
-
-      loadPage(1);
-    });
-  </script>
 </body>
 </html>
