--- a/index.html
+++ b/index.html
@@ -8,17 +8,26 @@
       background: #eee;
       font-family: Arial, sans-serif;
       text-align: center;
+      margin: 0;
+      padding: 20px;
     }
 
     #flipbook {
       width: 800px;
       height: 600px;
-      margin: 20px auto;
+      margin: 0 auto;
     }
 
     .page {
       width: 400px;
       height: 600px;
+      background: white;
+      overflow: hidden;
+    }
+
+    canvas {
+      width: 100%;
+      height: 100%;
     }
 
     button {
@@ -29,35 +38,33 @@
   </style>
 </head>
 <body>
+
   <h1>PDF Flipbook</h1>
   <div id="flipbook"></div>
 
   <button onclick="$('#flipbook').turn('previous')">Previous</button>
   <button onclick="$('#flipbook').turn('next')">Next</button>
 
-  <!-- jQuery -->
+  <!-- Libraries -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
-  <!-- Turn.js (working version) -->
   <script src="https://www.turnjs.com/lib/turn.min.js"></script>
-
-  <!-- PDF.js -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 
   <script>
-    const pdfUrl = "A-Feminist-Manifesto-Ita.pdf"; // Make sure this file exists in your root
+    const pdfUrl = "A-Feminist-Manifesto-Ita.pdf";
 
     const flipbook = $('#flipbook');
     const loadingTask = pdfjsLib.getDocument(pdfUrl);
 
     loadingTask.promise.then(function(pdf) {
       const numPages = pdf.numPages;
+      let loadedPages = 0;
 
-      let loadPage = function(pageNumber) {
-        pdf.getPage(pageNumber).then(function(page) {
-          const viewport = page.getViewport({scale: 1.5});
-          const canvas = document.createElement("canvas");
-          const context = canvas.getContext("2d");
+      for (let i = 1; i <= numPages; i++) {
+        pdf.getPage(i).then(function(page) {
+          const viewport = page.getViewport({scale: 1});
+          const canvas = document.createElement('canvas');
+          const context = canvas.getContext('2d');
 
           canvas.width = viewport.width;
           canvas.height = viewport.height;
@@ -66,29 +73,27 @@
             canvasContext: context,
             viewport: viewport
           }).promise.then(function() {
-            const pageDiv = document.createElement("div");
-            pageDiv.classList.add("page");
+            const pageDiv = document.createElement('div');
+            pageDiv.className = 'page';
             pageDiv.appendChild(canvas);
             flipbook.append(pageDiv);
 
-            if (pageNumber < numPages) {
-              loadPage(pageNumber + 1);
-            } else {
+            loadedPages++;
+            if (loadedPages === numPages) {
               initFlipbook();
             }
           });
         });
-      };
+      }
 
       function initFlipbook() {
         $('#flipbook').turn({
           width: 800,
           height: 600,
-          autoCenter: true
+          autoCenter: true,
+          display: 'double' // Important for book-like appearance
         });
       }
-
-      loadPage(1);
     });
   </script>
 </body>
