--- a/index.html
+++ b/index.html
@@ -15,14 +15,13 @@
     #flipbook {
       width: 800px;
       height: 600px;
-      margin: 0 auto;
+      margin: auto;
     }
 
     .page {
       width: 400px;
       height: 600px;
       background: white;
-      overflow: hidden;
     }
 
     canvas {
@@ -39,62 +38,60 @@
 </head>
 <body>
 
-  <h1>PDF Flipbook</h1>
-  <div id="flipbook"></div>
+<h1>PDF Flipbook</h1>
+<div id="flipbook"></div>
+<button onclick="$('#flipbook').turn('previous')">Previous</button>
+<button onclick="$('#flipbook').turn('next')">Next</button>
 
-  <button onclick="$('#flipbook').turn('previous')">Previous</button>
-  <button onclick="$('#flipbook').turn('next')">Next</button>
+<!-- Libraries -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://cdn.jsdelivr.net/gh/blasten/turn.js@master/lib/turn.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
 
-  <!-- Libraries -->
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script src="https://www.turnjs.com/lib/turn.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.10.377/pdf.min.js"></script>
+<script>
+  const pdfUrl = "A-Feminist-Manifesto-Ita.pdf";
 
-  <script>
-    const pdfUrl = "A-Feminist-Manifesto-Ita.pdf";
+  const flipbook = $('#flipbook');
+  const loadingTask = pdfjsLib.getDocument(pdfUrl);
 
-    const flipbook = $('#flipbook');
-    const loadingTask = pdfjsLib.getDocument(pdfUrl);
+  loadingTask.promise.then(function(pdf) {
+    const numPages = pdf.numPages;
+    let loadedPages = 0;
 
-    loadingTask.promise.then(function(pdf) {
-      const numPages = pdf.numPages;
-      let loadedPages = 0;
+    for (let i = 1; i <= numPages; i++) {
+      pdf.getPage(i).then(function(page) {
+        const viewport = page.getViewport({ scale: 1 });
+        const canvas = document.createElement('canvas');
+        const context = canvas.getContext('2d');
 
-      for (let i = 1; i <= numPages; i++) {
-        pdf.getPage(i).then(function(page) {
-          const viewport = page.getViewport({scale: 1});
-          const canvas = document.createElement('canvas');
-          const context = canvas.getContext('2d');
+        canvas.width = viewport.width;
+        canvas.height = viewport.height;
 
-          canvas.width = viewport.width;
-          canvas.height = viewport.height;
+        page.render({
+          canvasContext: context,
+          viewport: viewport
+        }).promise.then(function() {
+          const pageDiv = document.createElement('div');
+          pageDiv.className = 'page';
+          pageDiv.appendChild(canvas);
+          flipbook.append(pageDiv);
 
-          page.render({
-            canvasContext: context,
-            viewport: viewport
-          }).promise.then(function() {
-            const pageDiv = document.createElement('div');
-            pageDiv.className = 'page';
-            pageDiv.appendChild(canvas);
-            flipbook.append(pageDiv);
-
-            loadedPages++;
-            if (loadedPages === numPages) {
-              initFlipbook();
-            }
-          });
+          loadedPages++;
+          if (loadedPages === numPages) {
+            setTimeout(() => {
+              $('#flipbook').turn({
+                width: 800,
+                height: 600,
+                autoCenter: true,
+                display: 'double'
+              });
+            }, 100);
+          }
         });
-      }
+      });
+    }
+  });
+</script>
 
-      function initFlipbook() {
-        $('#flipbook').turn({
-          width: 800,
-          height: 600,
-          autoCenter: true,
-          display: 'double' // Important for book-like appearance
-        });
-      }
-    });
-  </script>
 </body>
 </html>
