--- a/index.html
+++ b/index.html
@@ -1,33 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="utf-8">
-<title>Source code</title>
-<link rel="stylesheet" href="css/style.css">
-<script src="https://cdn.3dflipbook.net/js/jquery.min.js"></script>
+  <meta charset="utf-8">
+  <title>3D PDF Flipbook</title>
+  <link rel="stylesheet" href="css/style.css">
+
+  <!-- jQuery (required by 3D FlipBook) -->
+  <script src="https://cdn.3dflipbook.net/js/jquery.min.js"></script>
 </head>
 <body>
-<div class="source-link">
-  <a class="show-source" data="simple-tag-pdf">Show source code</a>
-</div>
 
-<div class="sample-container-box">
-  <div class="sample-container flip-book-container" src="books/gallery/Food/Catalago-Natal-22.pdf">
+<!-- Container for the flipbook -->
+<div id="flipbook-container" style="width: 100%; height: 600px;"></div>
 
-  </div>
-</div>
-
-
-
+<!-- 3D FlipBook dependencies -->
 <script src="js/three.min.js"></script>
 <script src="js/pdf.min.js"></script>
-
-<script type="text/javascript">
+<script>
   window.PDFJS_LOCALE = {
     pdfJsWorker: 'js/pdf.worker.js',
     pdfJsCMapUrl: 'cmaps'
   };
 </script>
 <script src="js/3dflipbook.min.js"></script>
+
+<!-- Initialize the flipbook with your PDF -->
+<script>
+  jQuery(function () {
+    jQuery('#flipbook-container').FlipBook({
+      pdf: 'A-Feminist-Manifesto-Ita.pdf', // Your actual PDF file
+      template: {
+        html: 'templates/default-book-view.html',
+        styles: [
+          'css/white-book-view.css'
+        ],
+        script: 'js/default-book-view.js',
+        sounds: {
+          startFlip: 'sounds/start-flip.mp3',
+          endFlip: 'sounds/end-flip.mp3'
+        }
+      }
+    });
+  });
+</script>
+
 </body>
 </html>
