--- a/index.html
+++ b/index.html
@@ -2,44 +2,24 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>3D PDF Flipbook</title>
-  <link rel="stylesheet" href="css/style.css">
-
-  <!-- jQuery (required by 3D FlipBook) -->
-  <script src="https://cdn.3dflipbook.net/js/jquery.min.js"></script>
+  <title>3D FlipBook</title>
+  <link rel="stylesheet" href="https://cdn.3dflipbook.net/css/flipbook.style.css">
+  <script src="https://cdn.3dflipbook.net/js/libs/jquery.min.js"></script>
 </head>
 <body>
 
-<!-- Container for the flipbook -->
+<!-- FlipBook Container -->
 <div id="flipbook-container" style="width: 100%; height: 600px;"></div>
 
-<!-- 3D FlipBook dependencies -->
-<script src="js/three.min.js"></script>
-<script src="js/pdf.min.js"></script>
-<script>
-  window.PDFJS_LOCALE = {
-    pdfJsWorker: 'js/pdf.worker.js',
-    pdfJsCMapUrl: 'cmaps'
-  };
-</script>
-<script src="js/3dflipbook.min.js"></script>
+<!-- FlipBook Scripts -->
+<script src="https://cdn.3dflipbook.net/js/libs/three.min.js"></script>
+<script src="https://cdn.3dflipbook.net/js/libs/pdf.min.js"></script>
+<script src="https://cdn.3dflipbook.net/js/flipbook.min.js"></script>
 
-<!-- Initialize the flipbook with your PDF -->
 <script>
   jQuery(function () {
     jQuery('#flipbook-container').FlipBook({
-      pdf: 'A-Feminist-Manifesto-Ita.pdf', // Your actual PDF file
-      template: {
-        html: 'templates/default-book-view.html',
-        styles: [
-          'css/white-book-view.css'
-        ],
-        script: 'js/default-book-view.js',
-        sounds: {
-          startFlip: 'sounds/start-flip.mp3',
-          endFlip: 'sounds/end-flip.mp3'
-        }
-      }
+      pdf: 'A-Feminist-Manifesto-Ita.pdf'
     });
   });
 </script>
