--- a/index.html
+++ b/index.html
@@ -1,26 +1,105 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>3D FlipBook</title>
-  <link rel="stylesheet" href="https://cdn.3dflipbook.net/css/flipbook.style.css">
-  <script src="https://cdn.3dflipbook.net/js/libs/jquery.min.js"></script>
+  <meta charset="UTF-8">
+  <title>Simple Flipbook</title>
+  <style>
+    body {
+      margin: 0;
+      font-family: sans-serif;
+      text-align: center;
+    }
+    #pdf-render {
+      max-width: 100%;
+      margin: auto;
+      display: block;
+    }
+    .nav-buttons {
+      margin: 10px;
+    }
+    button {
+      padding: 10px 20px;
+      font-size: 16px;
+      margin: 0 10px;
+      cursor: pointer;
+    }
+  </style>
 </head>
 <body>
 
-<!-- FlipBook Container -->
-<div id="flipbook-container" style="width: 100%; height: 600px;"></div>
+<h2>A Feminist Manifesto (Flipbook)</h2>
+<canvas id="pdf-render"></canvas>
 
-<!-- FlipBook Scripts -->
-<script src="https://cdn.3dflipbook.net/js/libs/three.min.js"></script>
-<script src="https://cdn.3dflipbook.net/js/libs/pdf.min.js"></script>
-<script src="https://cdn.3dflipbook.net/js/flipbook.min.js"></script>
+<div class="nav-buttons">
+  <button id="prev-page">⬅ Previous</button>
+  <span>Page <span id="page-num"></span> of <span id="page-count"></span></span>
+  <button id="next-page">Next ➡</button>
+</div>
+
+<!-- Load PDF.js from CDN -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
 
 <script>
-  jQuery(function () {
-    jQuery('#flipbook-container').FlipBook({
-      pdf: 'A-Feminist-Manifesto-Ita.pdf'
+  const url = 'A-Feminist-Manifesto-Ita.pdf'; // Your PDF filename
+
+  let pdfDoc = null,
+      pageNum = 1,
+      pageIsRendering = false,
+      pageNumIsPending = null;
+
+  const scale = 1.5,
+        canvas = document.querySelector('#pdf-render'),
+        ctx = canvas.getContext('2d');
+
+  const renderPage = num => {
+    pageIsRendering = true;
+
+    pdfDoc.getPage(num).then(page => {
+      const viewport = page.getViewport({ scale });
+      canvas.height = viewport.height;
+      canvas.width = viewport.width;
+
+      const renderCtx = {
+        canvasContext: ctx,
+        viewport
+      };
+
+      page.render(renderCtx).promise.then(() => {
+        pageIsRendering = false;
+        if (pageNumIsPending !== null) {
+          renderPage(pageNumIsPending);
+          pageNumIsPending = null;
+        }
+      });
+
+      document.querySelector('#page-num').textContent = num;
     });
+  };
+
+  const queueRenderPage = num => {
+    if (pageIsRendering) {
+      pageNumIsPending = num;
+    } else {
+      renderPage(num);
+    }
+  };
+
+  document.querySelector('#prev-page').addEventListener('click', () => {
+    if (pageNum <= 1) return;
+    pageNum--;
+    queueRenderPage(pageNum);
+  });
+
+  document.querySelector('#next-page').addEventListener('click', () => {
+    if (pageNum >= pdfDoc.numPages) return;
+    pageNum++;
+    queueRenderPage(pageNum);
+  });
+
+  pdfjsLib.getDocument(url).promise.then(pdfDoc_ => {
+    pdfDoc = pdfDoc_;
+    document.querySelector('#page-count').textContent = pdfDoc.numPages;
+    renderPage(pageNum);
   });
 </script>
 
