--- a/index.html
+++ b/index.html
@@ -1,154 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
+  <meta charset="UTF-8">
   <title>Flipbook - A Feminist Manifesto</title>
+
+  <!-- DearFlip CSS -->
+  <link rel="stylesheet" href="dearflip/css/dflip.min.css" />
+  <link rel="stylesheet" href="dearflip/css/themify-icons.min.css" />
+
   <style>
     body {
       margin: 0;
-      font-family: 'Segoe UI', sans-serif;
       background: #f5f5f5;
+      font-family: sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
     }
 
     h2 {
-      margin-top: 20px;
-    }
-
-    #pdf-container {
-      position: relative;
-      max-width: 90%;
-      margin: 20px auto;
-    }
-
-    canvas {
-      width: 100%;
-      transition: opacity 0.3s ease-in-out;
-      box-shadow: 0 0 10px rgba(0,0,0,0.2);
-      border-radius: 8px;
-      background: white;
-    }
-
-    .nav-buttons {
-      display: flex;
-      align-items: center;
-      justify-content: center;
       margin: 20px;
     }
 
-    .arrow-btn {
-      background-color: #333;
-      color: white;
-      border: none;
-      padding: 10px 16px;
-      font-size: 18px;
-      cursor: pointer;
-      border-radius: 5px;
-      margin: 0 15px;
-      transition: background-color 0.2s;
-    }
-
-    .arrow-btn:hover {
-      background-color: #555;
-    }
-
-    #page-info {
-      font-size: 16px;
-      color: #333;
+    #flipbookContainer {
+      width: 90%;
+      max-width: 900px;
     }
   </style>
 </head>
 <body>
 
-  <h2>📖 A Feminist Manifesto</h2>
+  <h2>📖 A Feminist Manifesto (Flipbook)</h2>
 
-  <div id="pdf-container">
-    <canvas id="pdf-render"></canvas>
+  <div id="flipbookContainer">
+    <div class="dflip" data-pdf="A-Feminist-Manifesto-Ita.pdf"></div>
   </div>
 
-  <div class="nav-buttons">
-    <button class="arrow-btn" id="prev-page">⬅</button>
-    <span id="page-info">Page <span id="page-num"></span> of <span id="page-count"></span></span>
-    <button class="arrow-btn" id="next-page">➡</button>
-  </div>
+  <!-- DearFlip JS -->
+  <script src="dearflip/js/libs/jquery.min.js"></script>
+  <script src="dearflip/js/dflip.min.js"></script>
 
-  <!-- PDF.js from CDN -->
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
-
-  <script>
-    const url = 'A-Feminist-Manifesto-Ita.pdf';
-
-    let pdfDoc = null,
-        pageNum = 1,
-        pageIsRendering = false,
-        pageNumIsPending = null;
-
-    const scale = 1.5,
-          canvas = document.getElementById('pdf-render'),
-          ctx = canvas.getContext('2d');
-
-    function fadeCanvasOut() {
-      canvas.style.opacity = 0;
-    }
-
-    function fadeCanvasIn() {
-      canvas.style.opacity = 1;
-    }
-
-    function renderPage(num) {
-      pageIsRendering = true;
-      fadeCanvasOut();
-
-      pdfDoc.getPage(num).then(page => {
-        const viewport = page.getViewport({ scale });
-        canvas.height = viewport.height;
-        canvas.width = viewport.width;
-
-        const renderCtx = {
-          canvasContext: ctx,
-          viewport
-        };
-
-        page.render(renderCtx).promise.then(() => {
-          pageIsRendering = false;
-          fadeCanvasIn();
-          if (pageNumIsPending !== null) {
-            renderPage(pageNumIsPending);
-            pageNumIsPending = null;
-          }
-        });
-
-        document.getElementById('page-num').textContent = num;
-      });
-    }
-
-    function queueRenderPage(num) {
-      if (pageIsRendering) {
-        pageNumIsPending = num;
-      } else {
-        renderPage(num);
-      }
-    }
-
-    document.getElementById('prev-page').addEventListener('click', () => {
-      if (pageNum <= 1) return;
-      pageNum--;
-      queueRenderPage(pageNum);
-    });
-
-    document.getElementById('next-page').addEventListener('click', () => {
-      if (pageNum >= pdfDoc.numPages) return;
-      pageNum++;
-      queueRenderPage(pageNum);
-    });
-
-    pdfjsLib.getDocument(url).promise.then(pdfDoc_ => {
-      pdfDoc = pdfDoc_;
-      document.getElementById('page-count').textContent = pdfDoc.numPages;
-      renderPage(pageNum);
-    });
-  </script>
 </body>
 </html>
